Bug Fix (Overflow - Hidden), Footer Changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ Embedded content
 img { border: 0; /* 1 */
 -ms-interpolation-mode: bicubic; /* 2 */ }
 /* * Corrects overflow displayed oddly in IE 9. */
-svg:not(:root) { overflow: hidden; }
+svg:not(:root) { overflow: global; }
 /* ==========================================================================
 Figures
 ========================================================================== */
@@ -411,7 +411,7 @@ Preloader
 ========================================================================== */
 
 body {
-	overflow: hidden;
+	overflow: global;
 }
 
 /* Preloader */
